# C-Hospital-Triage-Management-System

./: CMakeLists.txt  Patient.hpp  PriorityQueue.hpp  TriageAlgorithm.hpp  main.cpp
